data/derived/sp14/progs/unify/prog0957.ml.out
Characters 139-140:
  | (w,y)::t -> ((w+z+y)/10),((w+y+z) mod 10)::t
                                               ^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
